@@ -5,15 +5,12 @@ import java.util.LinkedList;
 import com.github.pjpo.planning.SolutionException;
 import com.github.pjpo.planning.model.Solution;
 import com.github.pjpo.planning.problem.PlanningForInterval;
-import com.github.pjpo.planning.problem.PlanningForIntervalSolver;
 import com.github.pjpo.planning.ui.controller.GenerationOverviewController;
 
 import javafx.application.Platform;
 import javafx.concurrent.Task;
 
 public class PlanningGenerationTask extends Task<LinkedList<Solution>> {
-
-	private PlanningForIntervalSolver solver = null;
 
 	private boolean isAlive = true;
 
@@ -42,30 +39,21 @@ public class PlanningGenerationTask extends Task<LinkedList<Solution>> {
 					break;
 			}
 			
-			final Solution solution = planningImplementation.findNewSolution();
-			final Integer finalRetrys = new Integer(retrys);
-
-			if (planningImplementation.getPreviousAcceptedSolutions().size() == 0 && solution == null && !solver.hasSolution() && !solver.isUndefined()) {
-				throw new SolutionException("No solution");
-			} else if (solution != null) {
-				// UPDATES VALUES IN LABELS
-				Platform.runLater( () ->
-				controller.showFeedBack(new Integer(finalRetrys), solution.getWorkLoadSD()));
+			if (planningImplementation.findNewSolution() == false && planningImplementation.getSolutions().size() == 0) {
+				throw new SolutionException("No solution found");
 			} else {
-				Platform.runLater( () ->
-				controller.showFeedBack(new Integer(finalRetrys),
-						planningImplementation.getPreviousAcceptedSolutions().size() == 0 ? null : planningImplementation.getPreviousAcceptedSolutions().getLast().getWorkLoadSD()));
+				final Integer finalRetrys = Integer.valueOf(retrys);
+				// UPDATES VALUES IN LABELS
+				Platform.runLater(() ->
+				controller.showFeedBack(finalRetrys, planningImplementation.getSolutions().getFirst().getWorkLoadSD()));
 			}
 		}
 		// HERE, RETURN SOLUTIONS
-		return planningImplementation.getPreviousAcceptedSolutions();
+		return planningImplementation.getSolutions();
 	}
 
 	public void stopProcessing(String reason) {
 		synchronized (sync) {
-			if (solver != null) {
-				solver.stopProcessing(reason);
-			}
 			isAlive = false;
 		}
 	}
